@@ -26,6 +26,10 @@ Zope Changes
 
     Bugs Fixed
 
+      - Collector #556:  <dtml-sqlvar> now returns 'null' instead of 'None'
+        for values which are None in Python (sponsored by a bounty from
+        Logicalware).
+
       - Collector #1182: BBB Forward port fix from 2.7 branch (19 months
         ago!), reverting 'guarded_getitem' to pass the 'index' argument as
         the name to 'validate'.  This change is *not* propagated to the
